[gd_scene load_steps=5 format=3 uid="uid://dxy3vny2mm65t"]

[ext_resource type="Script" path="res://src/Scenes/UI/victory_screen.gd" id="1_daebc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_015jd"]
bg_color = Color(0.223529, 0.223529, 0.223529, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
shadow_size = 50

[sub_resource type="SystemFont" id="SystemFont_i2isj"]
font_names = PackedStringArray("Comic Sans MS")

[sub_resource type="SystemFont" id="SystemFont_pydmo"]

[node name="VictoryScreen" type="CanvasLayer"]
script = ExtResource("1_daebc")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_015jd")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_i2isj")
theme_override_font_sizes/font_size = 120
text = "EPIC FORTNITE DUBBERTON"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 100

[node name="PlayerStats" type="HBoxContainer" parent="PanelContainer/MarginContainer/Rows/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 100

[node name="Options" type="HBoxContainer" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 100

[node name="RematchButton" type="Button" parent="PanelContainer/MarginContainer/Rows/Options"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_pydmo")
theme_override_font_sizes/font_size = 40
text = "REMATCH"

[node name="CharacterSelectButton" type="Button" parent="PanelContainer/MarginContainer/Rows/Options"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_pydmo")
theme_override_font_sizes/font_size = 40
text = "BACK TO CHARACTER SELECTION"

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/Rows/Options"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_pydmo")
theme_override_font_sizes/font_size = 40
text = "BACK TO MAIN MENU"
